--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>carmengitit</groupId>
+    <groupId>com.carmengitit</groupId>
     <artifactId>ws03</artifactId>
     <version>1.0-SNAPSHOT</version>
     <name>ws03</name>
@@ -60,7 +60,7 @@
                         <!-- Default configuration for running with: mvn clean javafx:run -->
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>carmengitit.ws03/carmengitit.ws03.HelloApplication</mainClass>
+                            <mainClass>com.carmengitit.ws03.ShoppingCartApplication</mainClass>
                             <launcher>app</launcher>
                             <jlinkZipName>app</jlinkZipName>
                             <jlinkImageName>app</jlinkImageName>
